--- a/lesson01/sample18(form)/index.html
+++ b/lesson01/sample18(form)/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <form action="submit.php" method="get">
+  <form action="submit.php" method="post">
     <label for="my_name">お名前</label>
     <input type="text" id="my_name" name="my_name">
     <input type="submit" value="送信する">
